main layout and update read me

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/globe.png" />
+    <meta name="author" content="Jonel Hatwell">
+    <meta name="keywords" content="Frontend mentor, ReactJs, APi, Jonel Hatwell, Rest Countries, FEM">
+    <meta name="description" content="Frontend mentor rest countries solution by Jonel Hatwell">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Rest Countries | Jonel Hatwell</title>
   </head>
   <body>
     <div id="root"></div>
